// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShuttleItem tests should match the snapshot 1`] = `
<div>
  <div
    aria-selected="false"
    class="shuttle__item"
    data-index="1"
    data-value="foo"
    role="option"
    tabindex="-1"
  >
    Foo
  </div>
</div>
`;

exports[`ShuttleItem tests should match the snapshot when disabled 1`] = `
<div>
  <div
    aria-selected="false"
    class="shuttle__item shuttle__item--disabled"
    data-disabled="true"
    data-index="1"
    data-value="foo"
    role="option"
    tabindex="-1"
  >
    Foo
  </div>
</div>
`;

exports[`ShuttleItem tests should match the snapshot when selected 1`] = `
<div>
  <div
    aria-selected="true"
    class="shuttle__item shuttle__item--selected"
    data-index="1"
    data-value="foo"
    role="option"
    tabindex="-1"
  >
    Foo
  </div>
</div>
`;
